--- a/server/index.html
+++ b/server/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
   <head>
     <meta charset="utf-8" />
-    <title>RESTful SERVER</title>
+    <title>node server</title>
     <link rel="stylesheet" href="./restFront.css" />
   </head>
   <body>
